fix header on mobile

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -171,6 +171,7 @@ hr.section-divider {
 
 @media (min-width: 700px) {
   .site-header .wrapper {
+    position: relative;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
